<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/LoginFontTheme"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/vehicleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_name"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/vehicleInfoIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_info"
                android:contentDescription="@string/infoIcon"
                app:tint="@color/secondary_dark"
                app:layout_constraintStart_toEndOf="@id/vehicleTitle"
                app:layout_constraintTop_toTopOf="@id/vehicleTitle"
                app:layout_constraintBottom_toBottomOf="@id/vehicleTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/vehicleImage"
            android:layout_width="166dp"
            android:layout_height="135dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/vehicleImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleContainer" />

        <TextView
            android:id="@+id/priceDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/vehicleCost"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vehicleImage" />

        <TextView
            android:id="@+id/hourPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:text="@string/hourlyPrice"
            android:textColor="#008000"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/vehicleImage"
            app:layout_constraintTop_toBottomOf="@+id/kmPackageText" />

        <TextView
            android:id="@+id/zeroDepositText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/feature1"
            android:layout_marginStart="14dp"
            android:layout_marginTop="48dp"
            android:textColor="#008000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vehicleImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/kmPackageText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            android:text="@string/feature2"
            android:textColor="#008000"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vehicleImage"
            app:layout_constraintTop_toBottomOf="@+id/zeroDepositText" />

        <Button
            android:id="@+id/bookNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:backgroundTint="#00CED1"
            android:layout_marginTop="16dp"
            android:text="@string/btn_book_now"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hourPrice"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>